--- a/index.htm
+++ b/index.htm
@@ -33,6 +33,7 @@
     <meta name="author" content="Judolbet88" />
     <meta name="distribution" content="global" />
     <meta name="publisher" content="Judolbet88" />
+    <meta name="google-site-verification" content="DTqQ5b_mtf_rU7HZsJb-vuZKoODDlm9BBt82TIL9oxY" />
     <link rel="preconnect" href="https://cdn.ampproject.org/">
     <link rel="preconnect" href="https://fonts.gstatic.com/" crossorigin>
     <link rel="preload" as="script" href="https://cdn.ampproject.org/v0.js">
